--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 body {
     font-family: 'DM Sans', sans-serif;
     
-    background: linear-gradient(107.56deg, #00DDFB 0%, #00709F 100%); /*TODO tentar por o circle gradient*/
+    background: radial-gradient(circle, #000000 0%, #00DDFB 100%);
     height: 100vh;
 }
 
@@ -33,6 +33,7 @@ h1 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     font-size: 2.4rem;
+    line-height: 2.4rem;
 
     color: #34355B;
 }
@@ -56,7 +57,8 @@ p {
 input {
     outline: 0;
     border: 0;
-    padding: 1.6rem;
+    padding: 1.2rem;
+    text-align: center;
 
     background: #DCE2E9;
     border-radius: 4px 0px 0px 4px;
@@ -73,7 +75,13 @@ button {
 
     padding: 1.6rem;
 
-    background: #7879F1;
+    background-color: #7879F1;
     border-radius: 0px 4px 4px 0px;
     border: 0;
+
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #5353e9;
 }
