--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 body {
     font-family: 'DM Sans', sans-serif;
     
-    background: radial-gradient(circle, #000000 0%, #00DDFB 100%);
+    background: radial-gradient(circle, #34355B 0%, #94d4de 100%);
     height: 100vh;
 }
 
@@ -80,8 +80,10 @@ button {
     border: 0;
 
     cursor: pointer;
+    transition: all 0.5s;
 }
 
 button:hover {
     background-color: #5353e9;
+    transition: background-color 0.5s;
 }
