--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
     height: 100vh;
 }
 
+.hide {
+    display: none;
+}
+
 .game {
     position: absolute;
     top: 50%;
@@ -89,4 +93,17 @@ button {
 
 button:hover {
     background-color: #5353e9;
+}
+
+/* screen 2 */
+
+h2 {
+    font-size: 2.4rem;
+    font-weight: normal;
+
+    margin-bottom: 3.3rem;
+}
+
+.screen2 button {
+    border-radius: .4rem;
 }
